# diffeq-hs

./: .gitignore  README.md  TODO.md  diffeq-hs.cabal  diffeq.cabal  package.yaml  run_plot.sh  stack.yaml
scripts/: compile_run.sh
src/: CortezWeitz.Continuous.hs  LotkaVolterra.hs  Main.hs  Model.CW.ContinousF2.hs  Model.LotkaVolterra.hs  Model.Mougi-Iwasa.hs  Model.MougiIwasa  MougiIwasa.hs  Parameters.hs  Util.hs  parameters.json
