name:                diffeq-hs
version:             0.1.0.0
description:         Solving ODEs with Haskell
homepage:            https://github.com/ttoe/diffeq-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Thaddäus Töppen
copyright:           2017 Thaddäus Töppen
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable diffeq-hs
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <5,
                       hmatrix,
                       hmatrix-gsl,
                       Chart,
                       Chart-cairo,
                       time
  
library
  ghc-options:         -Wall
  exposed-modules:     MougiIwasa
  build-depends:       base >= 4.7 && <5,
                       hmatrix,
                       hmatrix-gsl,
                       Chart,
                       Chart-cairo,
                       time
  hs-source-dirs:      src
  default-language:    Haskell2010
